fix: set `min-width` for input and label to prevent layout issues

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,3 +18,8 @@ button:not(:disabled) {
 button:disabled {
   cursor: not-allowed;
 }
+
+input,
+label {
+  min-width: 0;
+}
